Implemented database view